--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Portafolio de Trabajos</title>
-  <link rel="stylesheet" href="C:\Users\Oveji\OneDrive\Documentos\portafolio\css/style.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="wrapper">
@@ -16,7 +16,7 @@
       <!-- página perfil -->
       <div class="book-page page-left">
         <div class="profile-page">
-          <img src="C:\Users\Oveji\OneDrive\Documentos\portafolio\img/logo.png" alt="Instituto Técnico Honduras" />
+          <img src="logo.png" alt="Instituto Técnico Honduras" />
           <h1>INSTITUTO TÉCNICO HONDURAS</h1>
           <p>
             El Instituto Técnico Honduras es una institución educativa reconocida por su enfoque en la formación tecnológica. Su oferta académica abarca áreas fundamentales para el desarrollo...
@@ -61,7 +61,7 @@
       <p>
         Esta carrera prepara a los estudiantes para trabajar en instalaciones eléctricas residenciales, comerciales e industriales. Aprenden a interpretar planos eléctricos, manejar herramientas y equipos, realizar mantenimiento preventivo y correctivo, y aplicar normas de seguridad eléctrica. Ideal para quienes desean trabajar en compañías eléctricas o crear su propio negocio.
       </p>
-       <img src="C:\Users\Oveji\OneDrive\Documentos\portafolio\img/elec.jpg" alt="baner" class="pequeña" />
+       <img src="elec.jpg" alt="baner" class="pequeña" />
     </div>
     <span class="number-page">2</span>
     <span class="nextprev-btn back" data-page="turn-1"><a href="#" class="btn1"><</a></span>
@@ -82,7 +82,7 @@
       <p>
         Este bachillerato enseña a los estudiantes a trabajar con circuitos electrónicos, sistemas digitales, microcontroladores y reparación de dispositivos electrónicos. Es perfecto para quienes quieren diseñar, montar y mantener equipos electrónicos, o continuar estudios en ingeniería electrónica.
       </p>
-       <img src="C:\Users\Oveji\OneDrive\Documentos\portafolio\img/Banner de electronica.jpg" alt="baner" class="pequeña" />
+       <img src="Banner de electronica.jpg" alt="baner" class="pequeña" />
     </div>
     <span class="number-page">3</span>
     <span class="nextprev-btn back" data-page="turn-2"><a href="#" class="btn1"><</a></span>
@@ -95,14 +95,14 @@
 <div class="book-page page-right turn" id="turn-4">
   <div class="page-front">
     <div class="profile-page">
-      <img src="img/refrigeracion.jpg" alt="Refrigeración" />
+      <img src="refrigeracion.jpg" alt="Refrigeración" />
     </div>
     <div class="workeduc-content">
       <h2>Bachillerato Técnico Profesional en Refrigeración y Aire Acondicionado</h2>
       <p>
         En esta carrera, los estudiantes aprenden a instalar, reparar y dar mantenimiento a sistemas de refrigeración y climatización. Se enfocan en el manejo de gases refrigerantes, normas ambientales, y tecnologías modernas para mantener la eficiencia energética de los equipos.
       </p>
-       <img src="C:\Users\Oveji\OneDrive\Documentos\portafolio\img/re.jpg" alt="baner" class="pequeña" />
+       <img src="re.jpg" alt="baner" class="pequeña" />
     </div>
     <span class="number-page">4</span>
     <span class="nextprev-btn back" data-page="turn-3"><a href="#" class="btn1"><</a></span>
@@ -115,14 +115,14 @@
 <div class="book-page page-right turn" id="turn-5">
   <div class="page-front">
     <div class="profile-page">
-      <img src="C:\Users\Oveji\OneDrive\Documentos\portafolio\img/industrial.jpg" alt="Mecánica Industrial" />
+      <img src="industrial.jpg" alt="Mecánica Industrial" />
     </div>
     <div class="workeduc-content">
       <h2>Bachillerato Técnico Profesional en Mecánica Industrial</h2>
       <p>
         Forma técnicos en el diseño, fabricación y mantenimiento de máquinas industriales. Aprenden soldadura, lectura de planos, uso de herramientas manuales y maquinaria como tornos y fresadoras. Es ideal para quienes desean trabajar en fábricas o talleres de manufactura.
       </p>
-       <img src="C:\Users\Oveji\OneDrive\Documentos\portafolio\img/in.jpg" alt="baner" class="pequeña" />
+       <img src="in.jpg" alt="baner" class="pequeña" />
     </div>
     <span class="number-page">5</span>
     <span class="nextprev-btn back" data-page="turn-4"><a href="#" class="btn1"><</a></span>
@@ -135,14 +135,14 @@
 <div class="book-page page-right turn" id="turn-6">
   <div class="page-front">
     <div class="profile-page">
-      <img src="C:\Users\Oveji\OneDrive\Documentos\portafolio\img/informatica.jpg" alt="Informática" />
+      <img src="informatica.jpg" alt="Informática" />
     </div>
     <div class="workeduc-content">
       <h2>Bachillerato Técnico Profesional en Informática</h2>
       <p>
         Este programa enseña programación, redes, mantenimiento de computadoras, diseño web, bases de datos y más. Es ideal para jóvenes apasionados por la tecnología, que deseen continuar estudios universitarios en informática o comenzar su carrera en el sector tecnológico.
       </p>
-       <img src="C:\Users\Oveji\OneDrive\Documentos\portafolio\img/inf.jpg" alt="baner" class="pequeña" />
+       <img src="inf.jpg" alt="baner" class="pequeña" />
     </div>
     <span class="number-page">6</span>
     <span class="nextprev-btn back" data-page="turn-5"><a href="#" class="btn1"><</a></span>
@@ -155,14 +155,14 @@
 <div class="book-page page-right turn" id="turn-7">
   <div class="page-front">
     <div class="profile-page">
-      <img src="C:\Users\Oveji\OneDrive\Documentos\portafolio\img/robottt.jpg" alt="Robótica" />
+      <img src="robottt.jpg" alt="Robótica" />
     </div>
     <div class="workeduc-content">
       <h2>Bachillerato Técnico Profesional en Informática con orientación a Robótica</h2>
       <p>
         Esta especialidad combina informática con robótica educativa. Se enseña programación de microcontroladores, ensamblaje de robots, automatización, y control remoto. Perfecta para estudiantes que sueñan con crear tecnología innovadora o seguir carreras en mecatrónica o robótica.
       </p>
-      <img src="C:\Users\Oveji\OneDrive\Documentos\portafolio\img/robottt.jpg" alt="baner" class="pequeña" />
+      <img src="robottt.jpg" alt="baner" class="pequeña" />
 
 
     </div>
@@ -177,14 +177,14 @@
 <div class="book-page page-right turn" id="turn-8">
   <div class="page-front">
     <div class="profile-page">
-      <img src="C:\Users\Oveji\OneDrive\Documentos\portafolio\img/Automotriz.jpg" alt="Mecánica Automotriz" />
+      <img src="Automotriz.jpg" alt="Mecánica Automotriz" />
     </div>
     <div class="workeduc-content">
       <h2>Bachillerato Técnico Profesional en Mecánica Automotriz</h2>
       <p>
         En esta carrera, los estudiantes se forman en el diagnóstico, reparación y mantenimiento de sistemas mecánicos, eléctricos y electrónicos de vehículos. Aprenden sobre motores, transmisiones, frenos, suspensión, inyección electrónica y más. Ideal para jóvenes que desean trabajar en talleres automotrices, concesionarias, o montar su propio negocio.
       </p>
-       <img src="C:\Users\Oveji\OneDrive\Documentos\portafolio\img/d.jpg" alt="baner" class="pequeña" />
+       <img src="d.jpg" alt="baner" class="pequeña" />
     </div>
     <span class="number-page">8</span>
     <span class="nextprev-btn back" data-page="turn-7"><a href="#" class="btn1"><</a></span>
